--- a/Stensaxpåse/index.html
+++ b/Stensaxpåse/index.html
@@ -7,23 +7,24 @@
 <body>
   <h1>Sten, Sax, Påse</h1>
   
-  <div id="player-name">
+  <form id="player-form" onsubmit="startGame(event)">
     <label for="name-input">Ange ditt namn:</label>
     <input type="text" id="name-input" />
-    <button id="start-button" onclick="startGame()">Starta spelet</button>
-  </div>
+    <button type="submit">Starta spelet</button>
+  </form>
   
   <div id="game" class="hidden">
     <h2 id="round">Omgång 1</h2>
     <h3 id="player-score">Spelare: 0</h3>
     <h3 id="computer-score">Datorn: 0</h3>
     <h2 id="result-message"></h2>
-    <button id="play-button" onclick="playRound('rock')">Sten</button>
-    <button id="play-button" onclick="playRound('paper')">Påse</button>
-    <button id="play-button" onclick="playRound('scissors')">Sax</button>
+    <div id="choices">
+      <button onclick="playRound('rock')">Sten</button>
+      <button onclick="playRound('paper')">Påse</button>
+      <button onclick="playRound('scissors')">Sax</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
